2003-04-02  Loban A Rahman <loban@earthling.net>

	* *.h, *.c: Code cleanup. Fixed some visibility issues.

2003-04-01  Loban A Rahman <loban@earthling.net>

	* stickynotes.c, stickynotes_callbacks.h, stickynotes_callbacks.c:
	  Fixed bug #109287: Choosing "close window" from the window menu of a
	  sticky note triggers destroying the note, now.
	* stickynotes_callbacks.c, stickynotes_applet_callbacks.c:
	  Fixed bug #109391: Focus indication around applet is back.
	* stickynotes_applet_callbacks.c:
	  Fixed bug #109781: About dialog acts properly now.

2003-03-28  Loban A Rahman <loban@earthling.net>

	* GNOME_StickyNotesApplet.xml.in, Makefile.am:
	  Removed redundant GNOME_StickyNotesApplet.xml.in file and added
	  GNOME_StickyNotesApplet.xml file. Modified Makefile.am to reflect.
	* stickynotes.c, stickynotes_applet_callbacks.c:
	  Fixed bug #109467: Note positions are no longer forgotten.
	  Fixed bug #109469: About window no longer closes early.
	  Fixed bug #109470: Preferences dialog no longer crashes applet.

2003-03-27  Padraig O'Briain  <padraig.obriain@sun.com>

	* Makefile.am: Add $(LIBGLADE_LIBS) to stickynotes_applet_LDADD to
	find unresolved symbols. Fixes bug #109264).

2003-03-21  Mikael Hallendal  <micke@codefactory.se>

	* stickynotes_applet_callbacks.c:
	- Use NULL instead of 0 for pointers.
	(menu_preferences_cb): build fixes.
	(menu_about_cb): build fixes

	* stickynotes_applet.c (stickynotes_applet_fill): 
	- Use NULL instead of 0 for pointers.

2003-03-19  Loban A Rahman <loban@earthling.net>

    * stickynotes_applet_callbacks.h, stickynotes_applet_callbacks.c:
      Fixed bug #107943. About window no longer leaks.
      Also, two preferences/about dialogs never appear.

2003-03-09  Loban A Rahman <loban@earthling.net>

    * Makefile.am, stickynotes.glade, TODO: Cleaned up.
    * stickynotes.glade, stickynotes_applet_callbacks.c: Fixed bug #107514.
      Controls in the prefs dialog are horizontally aligned correctly,