@@ -798,7 +798,7 @@ Changes will be saved instantly.</property>
 
 <widget class="GtkDialog" id="delete_all_dialog">
   <property name="border_width">6</property>
-  <property name="title" translatable="yes"></property>
+  <property name="title" translatable="yes">Delete all sticky notes</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">True</property>
