@@ -1,6 +1,14 @@
+2003-04-04  Loban A Rahman <loban@earthling.net>
+
+	* *.h, *.c: Fixed bug #106154, sticky notes are now correctly
+	  skipped from the pager and taskbar.
+	* *.h, *.c: Some minor code cleanup.
+	* *.h, *.c: Partially fixed bug #108124.
+
 2003-04-02  Loban A Rahman <loban@earthling.net>
 
 	* *.h, *.c: Code cleanup. Fixed some visibility issues.
+	* stickynotes_applet.c: Fixed a crash while autosaving.
 
 2003-04-01  Loban A Rahman <loban@earthling.net>
 
